--- a/Contatos.html
+++ b/Contatos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <nav>
+    <nav>
         <ul>
             <li><a href="/HomePage.html">Home</a></li>
             <li><a href="/Projetos.html">Projetos</a></li>
@@ -16,14 +16,7 @@
         </ul>
     </nav>
 
-    <b>José Luiz Pinto Singnoretti Garcia</b><br><br>
-
-    <img>
-    <b>
-        Um Jovem estudante de enegenharia de computação
-    </b>
-
-    <p>Amor</p>
+    <b>Contatos</b>
 
 </body>
 </html>
