Adding colors and developing the Home Page.

--- a/HomePage.html
+++ b/HomePage.html
@@ -15,15 +15,23 @@
             <li><a href="/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
+    <header>
+        <div class="center">
+            <img src="/imagens/EuDeOculos.jpg" class="imgRedonda">
+            <h1>José Luiz</h1>
+            <h2>Estudante de engenharia de computação.</h2>
+        </div>
+    </header>
 
-    <b>José Luiz Pinto Singnoretti Garcia</b><br><br>
-
-    <img>
-    <b>
-        Um Jovem estudante de enegenharia de computação
-    </b>
-
-    <p>Amor</p>
+    <main>
+        <section>
+            <h3>Sobre mim</h3>
+            <p>Meu nome é José Luiz Pinto Signoretti Garcia. Estudo engenharia de computação na universidade FACENS, no meu segundo semestre.</p>
+        </section>
+        <section>
+            <h3></h3>
+        </section>
+    </main>
 
 </body>
 </html>
