Contacs, and hobbie pages fineshed.

--- a/Contatos.html
+++ b/Contatos.html
@@ -15,8 +15,21 @@
             <li><a href="/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
+    <header>
+        <div class="center">
+            <img class="imgQuadrada" src="/imagens/DoritosZap.jpg">
+            <h1>Minhas Formas de Contato</h1>
+        </div>
+    </header>
 
-    <b>Contatos</b>
+    <main>
+        <section>
+            <h3>Whatsapp e email para contato:</h3>
+            <p>15 99806-3951<br>
+                redg7338@gmail.com
+            </p>
+        </section>
+    </main>
 
 </body>
 </html>
