--- a/Hobbies.html
+++ b/Hobbies.html
@@ -15,7 +15,27 @@
         <li><a href="/Hobbies.html">Hobbies</a></li>
     </ul>
 </nav>
-    <b>Hobbies</b>
+<header>
+    <div class="center"><h1>Hobbies</h1></div>
+</header>
+    <main class="center">
+        <section>
+            <h3>Ler.</h3>
+            <p><img class="imgQuadradaGrande" src="/imagens/o robert.jpg"></p>
+        </section>
+        <section>
+            <h3>Assistir filmes, animações, séries, etc.</h3>
+            <p><img class="imgQuadradaGrande" src="/imagens/duna.jpg"></p>
+        </section>
+        <section>
+            <h3>Jogar video games.</h3>
+            <p><img class="imgQuadradaGrande" src="/imagens/ff7.jpg"></p>
+        </section>
+        <section>
+            <h3>Jogar xadrez.</h3>
+            <p><img class="imgQuadradaGrande" src="/imagens/xadrez.webp"></p>
+        </section>
+    </main>
 
 </body>
 </html>
