--- a/HomePage.html
+++ b/HomePage.html
@@ -10,8 +10,8 @@
      <nav>
         <ul>
             <li><a href="/HomePage.html">Home</a></li>
-            <li><a href="/Projetos.html">Projetos</a></li>
-            <li><a href="/Contatos.html">Contato</a></li>
+            <li><a href="https://github.com/S100000">Projetos</a></li>
+            <li><a href="/Contatos.html">Contatos</a></li>
             <li><a href="/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
@@ -21,7 +21,7 @@
             <h1>José Luiz</h1>
             <h2>Estudante de engenharia de computação.</h2>
         </div>
-    </header>
+    </header><br><br>
 
     <main>
         <section>
@@ -29,7 +29,13 @@
             <p>Meu nome é José Luiz Pinto Signoretti Garcia. Estudo engenharia de computação na universidade FACENS, no meu segundo semestre.</p>
         </section>
         <section>
-            <h3></h3>
+            <h3>Cursos:</h3>
+            <p>
+                Curso que utilizei para aprender C#, orientação a objetos e .NET:<br><br>
+                <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/?couponCode=2021PM25">
+                    <img class="imgQuadrada" src="/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
+                </a>
+            </p>
         </section>
     </main>
 
