--- a/Páginas/Contatos.html
+++ b/Páginas/Contatos.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/HomePage.html">Home</a></li>
-            <li><a href="/Projetos.html">Projetos</a></li>
-            <li><a href="/Contatos.html">Contato</a></li>
-            <li><a href="/Hobbies.html">Hobbies</a></li>
+            <li><a href="/Páginas/HomePage.html">Home</a></li>
+            <li><a href="https://github.com/S100000">Projetos</a></li>
+            <li><a href="/Páginas/Contatos.html">Contato</a></li>
+            <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
     <header>
