Using google fonts and adding a video.

--- a/Páginas/Hobbies.html
+++ b/Páginas/Hobbies.html
@@ -15,10 +15,10 @@
         <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
     </ul>
 </nav>
-<header>
+<header class="press-start-2p-regular">
     <div class="center"><h1>Hobbies</h1></div>
 </header>
-    <main class="center">
+    <main class="center" class="press-start-2p-regular">
         <section>
             <h3>Ler.</h3>
             <p><img class="imgQuadradaGrande" src="/imagens/o robert.jpg"></p>
