--- a/Páginas/HomePage.html
+++ b/Páginas/HomePage.html
@@ -15,7 +15,7 @@
             <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
-    <header>
+    <header class="press-start-2p-regular">
         <div class="center">
             <img src="/imagens/EuDeOculos.jpg" class="imgRedonda">
             <h1>José Luiz</h1>
@@ -23,19 +23,24 @@
         </div>
     </header><br><br>
 
-    <main>
+    <main class="press-start-2p-regular">
         <section>
             <h3>Sobre mim</h3>
             <p>Meu nome é José Luiz Pinto Signoretti Garcia. Estudo engenharia de computação na universidade FACENS, no meu segundo semestre.</p>
         </section>
         <section>
-            <h3>Cursos:</h3>
+            <h3>Cursos</h3>
             <p>
                 Curso que utilizei para aprender C#, orientação a objetos e .NET:<br><br>
                 <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/?couponCode=2021PM25">
                     <img class="imgQuadrada" src="/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
                 </a>
             </p>
+        </section>
+        <section>
+            <h3>Vídeos</h3>
+            <p>Um vídeo do meu grupo de IOT, do semestre passado.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WDk6HmYuGQc?si=PQmgN6gBNQJHjEyf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </main>
 
