--- a/Páginas/Contatos.html
+++ b/Páginas/Contatos.html
@@ -15,14 +15,14 @@
             <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
-    <header>
+    <header class="press-start-2p-regular">
         <div class="center">
             <img class="imgQuadrada" src="/imagens/DoritosZap.jpg">
             <h1>Minhas Formas de Contato</h1>
         </div>
     </header>
 
-    <main>
+    <main class="press-start-2p-regular">
         <section>
             <h3>Whatsapp e email para contato:</h3>
             <p>15 99806-3951<br>
