--- a/Páginas/Contatos.html
+++ b/Páginas/Contatos.html
@@ -17,7 +17,7 @@
     </nav>
     <header class="press-start-2p-regular">
         <div class="center">
-            <img class="imgQuadrada" src="/imagens/DoritosZap.jpg">
+            <img class="imgQuadrada" src="/Páginas/imagens/DoritosZap.jpg">
             <h1>Minhas Formas de Contato</h1>
         </div>
     </header>
