--- a/Páginas/Hobbies.html
+++ b/Páginas/Hobbies.html
@@ -21,19 +21,19 @@
     <main class="center" class="press-start-2p-regular">
         <section>
             <h3>Ler.</h3>
-            <p><img class="imgQuadradaGrande" src="/imagens/o robert.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/o robert.jpg"></p>
         </section>
         <section>
             <h3>Assistir filmes, animações, séries, etc.</h3>
-            <p><img class="imgQuadradaGrande" src="/imagens/duna.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/duna.jpg"></p>
         </section>
         <section>
             <h3>Jogar video games.</h3>
-            <p><img class="imgQuadradaGrande" src="/imagens/ff7.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/ff7.jpg"></p>
         </section>
         <section>
             <h3>Jogar xadrez.</h3>
-            <p><img class="imgQuadradaGrande" src="/imagens/xadrez.webp"></p>
+            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/xadrez.webp"></p>
         </section>
     </main>
 
