--- a/Páginas/HomePage.html
+++ b/Páginas/HomePage.html
@@ -17,7 +17,7 @@
     </nav>
     <header class="press-start-2p-regular">
         <div class="center">
-            <img src="/imagens/EuDeOculos.jpg" class="imgRedonda">
+            <img src="/Páginas/imagens/EuDeOculos.jpg" class="imgRedonda">
             <h1>José Luiz</h1>
             <h2>Estudante de engenharia de computação.</h2>
         </div>
@@ -33,7 +33,7 @@
             <p>
                 Curso que utilizei para aprender C#, orientação a objetos e .NET:<br><br>
                 <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/?couponCode=2021PM25">
-                    <img class="imgQuadrada" src="/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
+                    <img class="imgQuadrada" src="/Páginas/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
                 </a>
             </p>
         </section>
