--- a/Paginas/Contatos.html
+++ b/Paginas/Contatos.html
@@ -9,15 +9,15 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/Páginas/HomePage.html">Home</a></li>
+            <li><a href="/Paginas/HomePage.html">Home</a></li>
             <li><a href="https://github.com/S100000">Projetos</a></li>
-            <li><a href="/Páginas/Contatos.html">Contato</a></li>
-            <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
+            <li><a href="/Paginas/Contatos.html">Contato</a></li>
+            <li><a href="/Paginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
     <header class="press-start-2p-regular">
         <div class="center">
-            <img class="imgQuadrada" src="/Páginas/imagens/DoritosZap.jpg">
+            <img class="imgQuadrada" src="/Paginas/imagens/DoritosZap.jpg">
             <h1>Minhas Formas de Contato</h1>
         </div>
     </header>
