--- a/Paginas/Hobbies.html
+++ b/Paginas/Hobbies.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
     <ul>
-        <li><a href="/Páginas/HomePage.html">Home</a></li>
+        <li><a href="/Paginas/HomePage.html">Home</a></li>
         <li><a href="https://github.com/S100000">Projetos</a></li>
-        <li><a href="/Páginas/Contatos.html">Contato</a></li>
-        <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
+        <li><a href="/Paginas/Contatos.html">Contato</a></li>
+        <li><a href="/Paginas/Hobbies.html">Hobbies</a></li>
     </ul>
 </nav>
 <header class="press-start-2p-regular">
@@ -21,19 +21,19 @@
     <main class="center" class="press-start-2p-regular">
         <section>
             <h3>Ler.</h3>
-            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/o robert.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Paginas/imagens/o robert.jpg"></p>
         </section>
         <section>
             <h3>Assistir filmes, animações, séries, etc.</h3>
-            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/duna.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Paginas/imagens/duna.jpg"></p>
         </section>
         <section>
             <h3>Jogar video games.</h3>
-            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/ff7.jpg"></p>
+            <p><img class="imgQuadradaGrande" src="/Paginas/imagens/ff7.jpg"></p>
         </section>
         <section>
             <h3>Jogar xadrez.</h3>
-            <p><img class="imgQuadradaGrande" src="/Páginas/imagens/xadrez.webp"></p>
+            <p><img class="imgQuadradaGrande" src="/Paginas/imagens/xadrez.webp"></p>
         </section>
     </main>
 
