--- a/Paginas/HomePage.html
+++ b/Paginas/HomePage.html
@@ -9,15 +9,15 @@
 <body>
      <nav>
         <ul>
-            <li><a href="/Páginas/HomePage.html">Home</a></li>
+            <li><a href="/Paginas/HomePage.html">Home</a></li>
             <li><a href="https://github.com/S100000">Projetos</a></li>
-            <li><a href="/Páginas/Contatos.html">Contato</a></li>
-            <li><a href="/Páginas/Hobbies.html">Hobbies</a></li>
+            <li><a href="/Paginas/Contatos.html">Contato</a></li>
+            <li><a href="/Paginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
     <header class="press-start-2p-regular">
         <div class="center">
-            <img src="/Páginas/imagens/EuDeOculos.jpg" class="imgRedonda">
+            <img src="/Paginas/imagens/EuDeOculos.jpg" class="imgRedonda">
             <h1>José Luiz</h1>
             <h2>Estudante de engenharia de computação.</h2>
         </div>
@@ -33,7 +33,7 @@
             <p>
                 Curso que utilizei para aprender C#, orientação a objetos e .NET:<br><br>
                 <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/?couponCode=2021PM25">
-                    <img class="imgQuadrada" src="/Páginas/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
+                    <img class="imgQuadrada" src="/Paginas/imagens/1_7I6oONv2fGLQJcNEFA4QSw.png">
                 </a>
             </p>
         </section>
