--- a/Paginas/Hobbies.html
+++ b/Paginas/Hobbies.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
     <ul>
-        <li><a href="/Paginas/HomePage.html">Home</a></li>
+        <li><a href="/Paginas/index.html">Home</a></li>
         <li><a href="https://github.com/S100000">Projetos</a></li>
         <li><a href="/Paginas/Contatos.html">Contato</a></li>
         <li><a href="/Paginas/Hobbies.html">Hobbies</a></li>
