fixing image error

--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -9,15 +9,15 @@
 <body>
      <nav>
         <ul>
-            <li><a href="/Paginas/index.html">Home</a></li>
+            <li><a href="Paginas/index.html">Home</a></li>
             <li><a href="https://github.com/S100000">Projetos</a></li>
-            <li><a href="/Paginas/Contatos.html">Contato</a></li>
-            <li><a href="/Paginas/Hobbies.html">Hobbies</a></li>
+            <li><a href="Paginas/Contatos.html">Contato</a></li>
+            <li><a href="Paginas/Hobbies.html">Hobbies</a></li>
         </ul>
     </nav>
     <header class="press-start-2p-regular">
         <div class="center">
-            <img src="/Paginas/imagens/EuDeOculos.jpg" class="imgRedonda">
+            <img src="Paginas/imagens/EuDeOculos.jpg" class="imgRedonda">
             <h1>José Luiz</h1>
             <h2>Estudante de engenharia de computação.</h2>
         </div>
