fix deploy error

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             <h3>Vídeos</h3>
-            <p>Um vídeo do meu grupo de IOT, do semestre passado.</p>
+            <p>Um vídeo do meu grupo da disciplina IOT, do semestre passado.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WDk6HmYuGQc?si=PQmgN6gBNQJHjEyf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </main>
